webserver/persistence/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: quay.io/danielstraub/webserver:persistence
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 100m        
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: webserver-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: webserver-log
          mountPath: /var/log/nginx
      volumes:
      - name: webserver-conf
        configMap:
          name: webserver-conf
      - name: webserver-log
        persistentVolumeClaim:
          claimName: webserver-log
