webserver/persistence/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  host: test.apps.ocp4.example.com
  to:
    kind: Service
    name: webserver
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
